.provarCaches/00D6C0000000xA6UAI/objects/sked__Templated_Job_Time_Constraint__c.object
<CustomObject>
    <fields>
        <fullName>sked__End_Before_Offset_Days__c</fullName>
        <label>End Before Offset Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__End_Before_Time_Of_Day__c</fullName>
        <label>End Before Time Of Day</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>sked__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Start_After_Offset_Days__c</fullName>
        <label>Start After Offset Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Start_After_Time_Of_Day__c</fullName>
        <label>Start After Time Of Day</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>sked__Start_Before_Offset_Days__c</fullName>
        <label>Start Before Offset Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Start_Before_Time_Of_Day__c</fullName>
        <label>Start Before Time Of Day</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>sked__Templated_Job__c</fullName>
        <label>Templated Job</label>
        <referenceTo>sked__Templated_Job__c</referenceTo>
        <relationshipLabel>Templated Job Time Constraints</relationshipLabel>
        <relationshipName>Templated_Job_Time_Constraints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SLA</fullName>
                    <default>true</default>
                    <label>SLA</label>
                </value>
                <value>
                    <fullName>Timeslot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Templated Job Time Constraint</label>
    <nameField>
        <displayFormat>JTC-{0000}</displayFormat>
        <label>Templated Job Time Constraint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Job Time Constraints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__EndBeforeOffsetDaysNonNegative</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISNULL( sked__End_Before_Offset_Days__c ) ) , sked__End_Before_Offset_Days__c &lt; 0 )</errorConditionFormula>
        <errorDisplayField>sked__End_Before_Offset_Days__c</errorDisplayField>
        <errorMessage>End Before Offset Days must be null or non-negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__StartAfterOffsetDaysNonNegative</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISNULL( sked__Start_After_Offset_Days__c ) ) , sked__Start_After_Offset_Days__c &lt; 0 )</errorConditionFormula>
        <errorDisplayField>sked__Start_After_Offset_Days__c</errorDisplayField>
        <errorMessage>Start After Offset Days must be null or non-negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__StartBeforeOffsetDaysNonNegative</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISNULL( sked__Start_Before_Offset_Days__c ) ) , sked__Start_Before_Offset_Days__c &lt; 0 )</errorConditionFormula>
        <errorDisplayField>sked__Start_Before_Offset_Days__c</errorDisplayField>
        <errorMessage>Start Before Offset Days must be null or non-negative</errorMessage>
    </validationRules>
</CustomObject>